--- a/bonds/webScraping.ipynb
+++ b/bonds/webScraping.ipynb
@@ -7,12 +7,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "import requests\n",
     "import datetime\n",
     "import time\n",
     "from bs4 import BeautifulSoup\n",
     "import pickle\n",
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "e1f85737-c117-41dd-88d5-045299c98048",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = 'https://treasurydirect.gov/GA-FI/FedInvest/selectSecurityPriceDate'\n",
+    "treasuriesPicklePath = '/Users/jetti/data/bonds/treasuries.pkl'"
    ]
   },
   {
@@ -41,7 +53,6 @@
     "    return df\n",
     "\n",
     "def queryTreasuryDirect(thisDate):\n",
-    "    url = 'https://treasurydirect.gov/GA-FI/FedInvest/selectSecurityPriceDate'\n",
     "    \n",
     "    day = thisDate.day\n",
     "    month = thisDate.month\n",
@@ -85,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "da8e2d15-4a87-4ab8-a6cd-0cc6613f2683",
    "metadata": {},
    "outputs": [
@@ -93,28 +104,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "days to get: 600\n",
-      "0\n",
-      "100\n",
-      "200\n",
-      "300\n",
-      "400\n",
-      "500\n"
+      "days to get: 620\n",
+      "0\n"
      ]
     }
    ],
    "source": [
-    "dataList = refreshTreasuryData('9/17/2014', '9/17/2023', '../bonds/treasuries.pkl')"
+    "dataList = refreshTreasuryData('9/17/2012', '9/17/2023', treasuriesPicklePath)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "7ea1e1dc-a922-4260-bac2-bca8d1ca3141",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../bonds/treasuries.pkl', 'wb') as f:\n",
+    "with open(treasuriesPicklePath, 'wb') as f:\n",
     "  pickle.dump(dataList, f)"
    ]
   },
