--- a/bonds/treasuryScraping.ipynb
+++ b/bonds/treasuryScraping.ipynb
@@ -7,7 +7,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import requests\n",
     "import datetime\n",
     "import time\n",
@@ -95,8 +94,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e37da97c",
+   "metadata": {},
+   "source": [
+    "# Get data for any missing dates"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "da8e2d15-4a87-4ab8-a6cd-0cc6613f2683",
    "metadata": {},
    "outputs": [
@@ -104,15 +111,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "days to get: 142\n",
+      "days to get: 136\n",
       "0\n",
       "100\n"
      ]
     }
    ],
    "source": [
-    "dataList = refreshTreasuryData('9/20/2011', '10/03/2023', treasuriesPicklePath)"
+    "startDate = '9/20/2011'\n",
+    "endDate = '10/07/2023'\n",
+    "\n",
+    "dataList = refreshTreasuryData(startDate, endDate, treasuriesPicklePath)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "fa82679e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(treasuriesPicklePath, 'wb') as f:\n",
+    "  pickle.dump(dataList, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "086c901e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
