--- a/interviewKickstart/interviewKickstart.ipynb
+++ b/interviewKickstart/interviewKickstart.ipynb
@@ -7,18 +7,15 @@
     "<h1 style=\"text-align: center;\">Continuous Probability Distributions</h1>\n",
     "<br>\n",
     "\n",
-    "## Outline of today's talk:\n",
+    "## Outline of today's lesson:\n",
     "\n",
-    "1. Brief review of finite distributions and non-finite discrete distributions.\n",
-    "1. Brief review of univariate and multivariate distributions.\n",
+    "1. Brief review of finite distributions, discrete distributions, and multivariate distributions.\n",
     "1. Continuous distributions - the math!\n",
     "    1.  Probability density function.\n",
     "    1.  Cumulative distribution function.\n",
-    "    1.  Univariate and multivariate continuous distributions.\n",
+    "    1.  Examples of continuous distributions.\n",
     "1. Continuous distributions - computing and calculating!\n",
-    "    1.  Scipy.stats\n",
-    "    1.  PyTorch\n",
-    "1. Adventurous look ahead: Stochastic processeses, i.e. \"infinite dimensional\" multivariate discrete/continuous distributions. \n",
+    "1. Interested in adventuring further?  Stochastic processeses, i.e. \"infinite dimensional\" multivariate discrete/continuous distributions. \n",
     "\n",
     "<br>\n",
     "\n"
@@ -28,7 +25,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To start, let's import some libraries..."
+    "### <span style=\"color: red;\">Note that in the following discussion we sometimes discuss direct applications to machine learning in this red font!</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To start, let's import some libraries we will be using..."
    ]
   },
   {
@@ -174,12 +178,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### <span style=\"color: red;\">An example of the use of the Bernouilli distribution in machine learning would be a two class classification problem, for example the cats and dogs problem.</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Check the SciPy documentation for things you can do with the random variables we explore in this notebook.  Here is the documentation for Bernoulli:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -187,8 +198,8 @@
       "text/html": [
        "\n",
        "        <iframe\n",
-       "            width=\"900\"\n",
-       "            height=\"500\"\n",
+       "            width=\"1100\"\n",
+       "            height=\"700\"\n",
        "            src=\"https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.bernoulli.html#scipy.stats.bernoulli\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
@@ -197,16 +208,16 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1f16436ab00>"
+       "<IPython.lib.display.IFrame at 0x1f166217970>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "IFrame(\"https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.bernoulli.html#scipy.stats.bernoulli\", 900,500)"
+    "IFrame(\"https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.bernoulli.html#scipy.stats.bernoulli\", 1100,700)"
    ]
   },
   {
@@ -232,7 +243,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### <span style=\"color: red;\">An example of the use of the categorical distribution in machine learning is the distribution over digits in the MNIST problem.</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Discrete distributions generalize finite distributions.  Consider the Poisson distribution:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$f(k) = \\text{Pr}(X = k) = \\frac{\\mu^k e^{-k}}{k!}  \\text{ for k = 0,1,2...}$$"
    ]
   },
   {
@@ -307,6 +332,279 @@
     "plt.ylabel('Probability')\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <span style=\"color: red;\">An example of the use of the Poisson distribution in machine learning is Poisson regression where the mean is dependent on regressors x through the coefficients $$\\mu(x) = e^{\\theta x}$$ This \"machine learning\" example is an example of generalized linear regression and \"training\" this model means we solve for the coefficients $\\theta$.  Can you think of a way to use a nonlinear model for the mean $\\mu$?\n",
+    "</span>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Recall multivariate distributions (which give the probabilities for the outcomes of two or more random variables):"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For example, toss two fair die independently.  Then $$\\text{Pr}(d_1 = 2, d_2 = 5) = \\frac{1}{6} \\cdot \\frac{1}{6} = \\frac{1}{36}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Continuous Distributions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### <span style=\"color: blue;\">Warning:  The following discussion is slightly mathematically simplied and if you decide to dig deeper into probability theory you will find that some of the ideas below will have to be modified.  However for most practical applications this discussion suffices.</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1.  A _continuous_ distribution is a distribution over the real numbers $\\mathbb{R}$ in the _univariate_ case or a vector space over the reals in the _multivariate_ case, for example $\\mathbb{R}^2$.\n",
+    "1.  The probability for any fixed number is 0!\n",
+    "1.  However _intervals_ on the real line, e.g. [5, 9], may have non-zero probability and can be calculated using the _cumulative distribution function_ or integrating the _probability density function_.  We discuss both of these functions now."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- densities can be greater than 1\n",
+    "- densities are analogous to probability mass functions\n",
+    "- compare discrete and continuous uniform\n",
+    "- compare normal and binomial and mention the central limit theorem"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Optional Fun Bonus: Stochastic Processes !"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### <span style=\"color: blue;\">Warning: \"Stochastic\" is just a fancy word for \"random.\"</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1.  A stochastic process is, informally, a indexed collection of random variables $\\{X_t\\}$ where the index $t$ is often interpreted as \"time.\"\n",
+    "1.  The stochastic process is called discrete or continous if the index $t$ takes values in $\\{0,1,2,...\\}$ or if $t$ takes values in $\\mathbb{R}$ respectively."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Let's look at a discrete time, two-dimensional _random walk_:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"1000\"\n",
+       "            height=\"700\"\n",
+       "            src=\"https://en.wikipedia.org/wiki/Random_walk\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x1f16617b130>"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "IFrame(\"https://en.wikipedia.org/wiki/Random_walk\", 1000, 700)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Continuous time, one-dimensional random walk:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"700\"\n",
+       "            height=\"500\"\n",
+       "            src=\"https://en.wikipedia.org/wiki/Wiener_process#/media/File:Wiener-process-5traces.svg\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x1f166118700>"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "IFrame(\"https://en.wikipedia.org/wiki/Wiener_process#/media/File:Wiener-process-5traces.svg\", 700, 500)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Two dimensional \"spatial\" Gaussian process:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"1100\"\n",
+       "            height=\"400\"\n",
+       "            src=\"https://research.cs.aalto.fi/pml/software/gpstuff/demo_regression1.shtml\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x1f166be8a00>"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "IFrame(\"https://research.cs.aalto.fi/pml/software/gpstuff/demo_regression1.shtml\",1100,400)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"1100\"\n",
+       "            height=\"400\"\n",
+       "            src=\"https://scikit-learn.org/stable/modules/gaussian_process.html\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x1f166be88e0>"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "IFrame(\"https://scikit-learn.org/stable/modules/gaussian_process.html\", 1100, 400)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"1100\"\n",
+       "            height=\"400\"\n",
+       "            src=\"https://en.wikipedia.org/wiki/Neural_network_Gaussian_process\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x1f16627fc70>"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "IFrame(\"https://en.wikipedia.org/wiki/Neural_network_Gaussian_process\", 1100, 400)"
    ]
   },
   {
