--- a/interviewKickstart/interviewKickstartBAD.ipynb
+++ b/interviewKickstart/interviewKickstartBAD.ipynb
@@ -12,30 +12,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Outline of today's lesson:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "1. Looking back: A brief review of finite distributions, discrete distributions, and multivariate distributions.\n",
-    "1. Continuous distributions\n",
-    "    1.  Probability density function.\n",
-    "    1.  Cumulative distribution function.\n",
-    "    1.  Examples of continuous distributions.\n",
-    "    1. Continuous distributions - computing and calculating.\n",
-    "1. Looking forward: stochastic processeses, i.e. \"infinite dimensional\" multivariate discrete/continuous distributions. \n",
-    "\n",
-    "<br>\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### <span style=\"color: red;\">Note that in the following discussion we sometimes discuss direct applications to machine learning in this red font!</span>"
    ]
   },
@@ -70,16 +46,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "Let's look at the most simple random variable possible, a Bernoulli random variable, which can only take two values: 0 or 1.  In other words it is like flipping a coin.  The \"coin\" does not have to be fair.  "
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +73,7 @@
        "(0.3, 0.21)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,16 +91,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 1, 1], dtype=int64)"
+       "array([1, 0, 0], dtype=int64)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,13 +118,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ef830a12f5b4444cb61840ba3477a06e",
+       "model_id": "96f977b0b00e408585545d064de3a9cb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -208,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -226,10 +194,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x239c9f20ac0>"
+       "<IPython.lib.display.IFrame at 0x1fc81589a20>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,57 +215,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0, 1, 0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 0, 1],\n",
-       "       [0, 0, 0, 1, 0, 0],\n",
-       "       [0, 1, 0, 0, 0, 0],\n",
-       "       [0, 0, 1, 0, 0, 0]])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "probs = (.1, .4, .2, .1, .1, .1)\n",
-    "\n",
-    "categorical = scipy.stats.multinomial(n=1, p=probs)\n",
-    "categorical.rvs(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1, 0, 2, 0, 0, 0],\n",
-       "       [0, 2, 0, 1, 0, 0],\n",
-       "       [1, 1, 0, 1, 0, 0],\n",
-       "       [0, 0, 2, 1, 0, 0],\n",
-       "       [0, 1, 0, 2, 0, 0]])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "nSample = 1\n",
     "probs = (.1, .4, .2, .1, .1, .1)\n",
     "\n",
-    "multinomial = scipy.stats.multinomial(n=3, p=probs)\n",
-    "multinomial.rvs(5)"
+    "categorical = scipy.stats.multinomial(nSample, probs)"
    ]
   },
   {
